- Fixed missing padding collapse on person profile page in Rock theme.

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -1415,8 +1415,10 @@ body.navbar-side-open {
 }
 
 // person profile
-@media (min-width: @screen-md-min) {
-  .personprofile {
+.personprofile {
+  margin: -5px -15px 0;
+
+  @media (min-width: @screen-md-min) {
     margin: -35px -35px 0;
   }
 }
